cabal-version:      2.4
name:               sortium
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Chord
    Client
    Server
    Stabilize
    Connections
    State
    APIServer
    Lib
    Rest
    MessageHandler
  hs-source-dirs:
    src
  build-depends:
    base, network, split, scotty, aeson, bytestring, containers, hashable, vector, unordered-containers
  default-language: Haskell2010

executable sortium-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base, sortium, network, containers
  default-language:    Haskell2010
   
